# AI-Trading-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  github-issues.md
src/ai_trading_agent/: __init__.py  config.py  main.py
src/ai_trading_agent/dashboard/: __init__.py
src/ai_trading_agent/data/: __init__.py
src/ai_trading_agent/exchange/: __init__.py  base.py  capital_client.py  signal_sender.py
src/ai_trading_agent/forecasting/: __init__.py
src/ai_trading_agent/indicators/: __init__.py
src/ai_trading_agent/news/: __init__.py
src/ai_trading_agent/storage/: __init__.py
src/ai_trading_agent/strategy/: __init__.py
tasks/: lessons.md  todo.md
tests/: test_config.py  test_exchange.py
